# smallmammalsclassifier

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
resources/models/G2-1-long/: G2-1-long_metadata.json  G2-1-long_metrics.csv  original_df_Audio_Snippets_G2-1-long.csv  prediction_df_Audio_Snippets_G2-1-long.csv  prediction_df_Audio_Snippets_G2-1-long.pkl
resources/models/G2-6-long/: G2-6-long_metadata.json  G2-6-long_metrics.csv
src/classification/: classification_functions.py  classify.py  prepare.py
src/evaluation/: evaluate.py  evaluation_functions.py
src/preprocessing/: create_audio_snippets.py  create_train_jsons.py
src/shared/: audio_functions.py  files_manipulation_functions.py  genera.py  groups_minimal.py  model_config.py
src/training/: set_parameters.py  train.py  training_functions.py
