[project]
name = "smallmammalsclassifier"
version = "0.0.1"
dependencies = ["opensoundscape", "pydantic", "librosa", "soundfile", "numpy", "odfpy", "pyexiftool", "scikit-multilearn", "wandb"]
requires-python = ">=3.9"
authors = [
  {name = "Maria Riffel"}, #TODO add email adress as email = "email@ress.de"
]
description = "Python project for training, predicting, and evaluating a small terrestrial mammal classifier"
readme = "README.md"
license = {file = "LICENSE.md"}


[project.urls]
Homepage = "https://github.com/riffelmaria/smallmammalsclassifier"

[project.scripts]
#TODO
